--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.0.0",
+    "sync-storage": "^0.4.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
