--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-dotenv": "^2.5.5",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-get-random-values": "^1.7.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.7.1",
     "react-native-paystack-webview": "^3.2.1",
